unpackaged/main/default/objects/Lote_de_Inventario__c/Lote_de_Inventario__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los conteos de productos por lote.</description>
    <label>Lote de Inventario</label>
    <nameField>
        <displayFormat>LINV-{0000000}</displayFormat>
        <label>Lote de Inventario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lotes de Inventario</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>