unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Clave_de_Inventario__c.field-meta.xml
<CustomField>
    <fullName>Clave_de_Inventario__c</fullName>
    <label>Clave de Inventario</label>
    <referenceTo>Clave_de_Inventario__c</referenceTo>
    <relationshipLabel>Lotes de Inventario</relationshipLabel>
    <relationshipName>Lotes_de_Inventario</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>