unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Conteo_Actual__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Actual__c</fullName>
    <description>Cantidad actual contada en el lote.</description>
    <label>Conteo Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>