unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Conteo_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Anterior__c</fullName>
    <description>Cantidad previa contada en el lote.</description>
    <label>Conteo Anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>