unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Estatus_Conteo_Lote__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Conteo_Lote__c</fullName>
    <label>Estatus Conteo Lote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iniciado</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>