unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Estatus_Inventario__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Inventario__c</fullName>
    <description>Estatus del Inventario Relacionado.</description>
    <formula>TEXT(Clave_de_Inventario__r.Inventario__r.Estatus__c)</formula>
    <label>Estatus Inventario</label>
    <type>Text</type>
</CustomField>