unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Fecha_de_Caducidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Caducidad__c</fullName>
    <description>Fecha de caducidad del insumo en el lote.</description>
    <label>Fecha de Caducidad</label>
    <type>Date</type>
</CustomField>