unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Fecha_de_Modificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Modificaci_n__c</fullName>
    <description>Fecha de última modificación.</description>
    <label>Fecha de Modificación</label>
    <type>Date</type>
</CustomField>