unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Fecha_Inicio_Inventario__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Inventario__c</fullName>
    <description>Campo de ayuda para las validar si el Inventario relacionado esta en estatus En Firma el día actual.</description>
    <formula>Clave_de_Inventario__r.Inventario__r.Fecha_Inicio__c</formula>
    <label>Fecha Inicio Inventario</label>
    <type>Date</type>
</CustomField>