unpackaged/main/default/objects/Lote_de_Inventario__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <description>Texto que identifica al lote.</description>
    <label>Lote</label>
    <length>50</length>
    <type>Text</type>
</CustomField>